--- a/dissertation_final.ipynb
+++ b/dissertation_final.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/minajm/diss_prep_initial/blob/main/dissertation_final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/minajm/Msc_Diss_Cod/blob/main/dissertation_final.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -2037,11 +2037,15 @@
       "source": [
         "# A function to plot and print result\n",
         "def modelEval(y_pred, y_prob):\n",
+        "# Evaluate the performance of a binary classification model\n",
+        "\n",
+        "    # Compute evaluation metrics\n",
         "    acc = accuracy_score(test_data[\"recommended\"], y_pred)\n",
         "    fi = f1_score(test_data[\"recommended\"], y_pred)\n",
         "    percision = precision_score(test_data[\"recommended\"], y_pred)\n",
         "    recall = recall_score(test_data[\"recommended\"], y_pred)\n",
         "    \n",
+        "    # Print evaluation metrics\n",
         "    print ('',end='\\n\\n')\n",
         "    print(\"Accuracy Percent: {:.2f} %\".format(acc *100),end='\\n')\n",
         "    print(\"Accuracy: {:.4f}\".format(acc *100),end='\\n')\n",
@@ -2049,10 +2053,11 @@
         "    print(\"precision score: {:.4f}\".format(percision),end='\\n')\n",
         "    print(\"recall score: {:.4f}\".format(recall),end='\\n\\n\\n')\n",
         "    \n",
+        "    # Print classification report\n",
         "    print ('Classification Report:',end='\\n\\n')\n",
         "    print(classification_report(test_data[\"recommended\"],y_pred),end='\\n\\n')\n",
         "\n",
-        "\n",
+        "    # Plot and print confusion matrix\n",
         "    print ('Confusion Matrix',end='\\n\\n')\n",
         "    cmatrix = confusion_matrix(test_data[\"recommended\"],y_pred)\n",
         "    group_names = ['True Neg','False Pos','False Neg','True Pos']\n",
@@ -2084,18 +2089,6 @@
       "id": "D11q7y8kgKGi"
     },
     {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "id": "v2QH5yNLgNCs"
-      },
-      "outputs": [],
-      "source": [
-        "model = SVC(kernel ='linear', C = 1)"
-      ],
-      "id": "v2QH5yNLgNCs"
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### TFIDF + SVM"
@@ -2108,6 +2101,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Initialize an SVM model with a linear kernel and C=1 for TF-IDF\n",
         "model_svm_tfidf = SVC(kernel ='linear', C = 1)"
       ],
       "metadata": {
@@ -2207,8 +2201,13 @@
     {
       "cell_type": "code",
       "source": [
+        "# Initialize a list to store the cross-validation results for the SVM model based on TF-IDF\n",
         "results_svm_tfidf = []\n",
+        "\n",
+        "# Create a repeated stratified K-fold cross-validator\n",
         "kfold = RepeatedStratifiedKFold(n_splits=10, n_repeats = 3, random_state=1)\n",
+        "\n",
+        "# Evaluate the SVM model using cross-validation, with accuracy as the evaluation metric\n",
         "results_svm_tfidf = cross_val_score(model_svm_tfidf, tfidf_features_train, train_data[\"recommended\"], \n",
         "                                    cv=kfold, scoring='accuracy') "
       ],
@@ -2222,6 +2221,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Saving Result\n",
         "np.save('results_svm_tfidf.npy', results_svm_tfidf)"
       ],
       "metadata": {
@@ -2234,6 +2234,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Loading Result\n",
         "results_svm_tfidf1 = np.load('results_svm_tfidf.npy')"
       ],
       "metadata": {
@@ -2246,10 +2247,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# Computing the mean and standard deviation of the scores\n",
         "mean1 = results_svm_tfidf1.mean()\n",
         "std1 =  results_svm_tfidf1.std()\n",
         "p_mean1 = print(\"Mean Acurracy: {:.2f} %\".format(mean1 *100),end='\\n')\n",
-        "p_std1 = print(\"STD Acurracy: {:.4f}\".format(std1 ),end='\\n')\n"
+        "p_std1 = print(\"STD Acurracy: {:.4f}\".format(std1 ),end='\\n')"
       ],
       "metadata": {
         "colab": {
